FEAT(): se agrega logica para insertar un nuevo personaje y para eliminar uno

--- a/src/app/dbz/components/list/list.component.html
+++ b/src/app/dbz/components/list/list.component.html
@@ -1,13 +1,16 @@
-<h4>Lsitadp</h4>
+<h4>Lsitado</h4>
 <ul class="list-group">
-    <li class="list-group-item" [ngClass]="{
+    <li class="list-group-item d-flex justify-content-between align-items-center" [ngClass]="{
         'list-group-item-primary': isFirst,
         'list-group-item-dark': isLast
     }" *ngFor="let character of characterList; index as i; first as isFirst; last as isLast">
-        <span class="text-primary">{{ i +1 }}. </span>
-        <span>{{ character.name }} - </span>
-        <strong>Power: </strong>
-        <span>{{ character.power }}</span>
+        <div>
+            <span class="text-primary">{{ i +1 }}. </span>
+            <span>{{ character.name }} - </span>
+            <strong>Power: </strong>
+            <span>{{ character.power }}</span>
+        </div>
+        <button class="btn btn-danger" (click)="onDeleteCharacter(i)">X</button>
     </li>
 
 </ul>
