--- a/src/app/dbz/components/add-character/add-character.component.html
+++ b/src/app/dbz/components/add-character/add-character.component.html
@@ -1,6 +1,8 @@
 <h4>Agregar Personajes</h4>
 <form class="row">
-    <input class="form-control mb-2" type="text" placeholder="Nombre">
-    <input class="form-control mb-2" type="number" placeholder="Poder">
-    <button class="btn btn-primary" type="submit">Agregar</button>
+    <input class="form-control mb-2" [(ngModel)]="character.name" name="name" type="text" placeholder="Nombre">
+    <input class="form-control mb-2" [(ngModel)]="character.power" name="power" type="number" placeholder="Poder">
+    <button class="btn btn-primary" type="submit" (click)="emitCharacter()">Agregar</button>
+
+    <pre>{{ character | json }}</pre>
 </form>
