FIX(): se corrige texto

--- a/src/app/dbz/components/add-character/add-character.component.html
+++ b/src/app/dbz/components/add-character/add-character.component.html
@@ -4,5 +4,5 @@
     <input class="form-control mb-2" [(ngModel)]="character.power" name="power" type="number" placeholder="Poder">
     <button class="btn btn-primary" type="submit" (click)="emitCharacter()">Agregar</button>
 
-    <pre>{{ character | json }}</pre>
+    <!-- <pre>{{ character | json }}</pre> -->
 </form>
