--- a/src/app/dbz/components/list/list.component.html
+++ b/src/app/dbz/components/list/list.component.html
@@ -1,4 +1,4 @@
-<h4>Lsitado</h4>
+<h4>Listado</h4>
 <ul class="list-group">
     <li class="list-group-item d-flex justify-content-between align-items-center" [ngClass]="{
         'list-group-item-primary': isFirst,
